FIX: XPath contrast.

--- a/site/css/site.css
+++ b/site/css/site.css
@@ -138,5 +138,5 @@ section.copyright {
 }
 
 td code.highlighter-rouge {
-  colour: #d60766;
+  color: #d60766;
 }
